--- a/notebooks/ARMA.ipynb
+++ b/notebooks/ARMA.ipynb
@@ -43,13 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "99cca9e6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load dataset\n",
-    "file_path = 'data/germany_cleaned_load_data.csv'\n",
+    "file_path = '../data/germany_cleaned_load_data.csv'\n",
     "data = pd.read_csv(file_path)\n",
     "\n",
     "# Convert timestamps and set index\n",
