--- a/notebooks/LSTM.ipynb
+++ b/notebooks/LSTM.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cde5f5c8",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
    ],
    "source": [
     "# Load dataset\n",
-    "file_path = 'data/germany_cleaned_load_data.csv'\n",
+    "file_path = '../data/germany_cleaned_load_data.csv'\n",
     "data = pd.read_csv(file_path)\n",
     "\n",
     "# Convert timestamps to datetime\n",
